--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="style.css">
     <title>Calculadora de Calorias para pets</title>
 </head>
-<body onclick="calcular()" onforminput="calcular()">
+<body onclick="calcular(animal)" onforminput="calcular()">
     <main>
         <form action="post" id="formulario_principal">
             <p>
                 <input type="radio" name="especie" id="input_cao" value="cao">
-                <label for="input_cao">
+                <label for="input_cao" class="label_radio">
                     Cachorro
                 </label>
                 <input type="radio" name="especie" id="input_gato" value="gato">
-                <label for="input_gato">
+                <label for="input_gato" class="label_radio">
                     Gato
                 </label>
             </p>
@@ -30,14 +30,29 @@
                 <label for="input_hospitalizado">
                     Está hospitalizado?
                 </label>
-                <input type="checkbox" id="input_hospitalizado" onclick="alternarFormularioHospitlaizado()" checked>
+                <input type="checkbox" id="input_hospitalizado"
+                 onclick="alternarFormularioHospitlaizado()">
             </p>
-            <p id="formulario_hospitalizado" class="formulario_on">
-                <label for="politraumatismo">
-                    Politraumatismo?
-                </label>
-                <input type="checkbox" name="" id="input_politraumatismo">
-            </p>
+            <div id="formulario_hospitalizado" class="input_hospitalizado_off">
+                <p>
+                    <label for="politraumatismo">
+                        Politraumatismo?
+                    </label>
+                    <input type="checkbox" name="" id="input_politraumatismo">
+                </p>
+                <p>
+                    <label for="hipofagia" id="label_hipofagia">
+                        Hipofagia há 7 dias ou mais?
+                    </label>
+                    <input type="checkbox" name="" id="input_hipofagia">
+                </p>
+                <p>
+                    <label for="emese" id="label_hipofagia">
+                        Emese e/ou inapetencia há 3 dias ou mais?
+                    </label>
+                    <input type="checkbox" name="" id="input_emese">
+                </p>
+            </div>
         </form>
         <article>
             <span  id="resultado"></span>
