--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Calculadora de Calorias para pets</title>
 </head>
 <body onclick="calcular(animal)" onforminput="calcular()">
+    <header>
+        <h1>Calculadora de Calorias para Pets</h1>
+    </header>
     <main>
         <form action="post" id="formulario_principal">
             <p>
