retirado o teste de pop-up

--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
                 Calcule as refeições!
             </span>
         </article>
-        <div class="popup" onclick="mostrarPopUp()">Teste de Pop-up
+        <div class="popup" onclick="mostrarPopUp()" style="display:none;">Teste de Pop-up
             <span class="popuptext" id="popup_id">Texto qualquer...</span>
         </div>
     </main>
     <footer>
-        
     </footer>
     <script src="script.js"></script>
 </body>
