Trocada const neb de 70 para 100 adicionada descricao sobre calculo na header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body onclick="calcular(animal)" onforminput="calcular()">
     <header>
-        <h1 >Calculadora de Calorias para Pets</h1>
+        <h1 class="tituloPrincipal">Calculadora de Calorias para Pets</h1>
+        <p>Cálculo baseado nas nescessidades basais (NEB)</p>
     </header>
     <main>
         <form action="post" id="formulario_principal">
