--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <label for="input_peso">
                 Peso: 
                 </label>
-                <input type="number" id="input_peso" min="0" onchange="calcular(animal)" 
+                <input type="number" id="input_peso" min="0" step="0.1" onchange="calcular(animal)" 
                 onkeypress="calcular(animal)">
             </p>
             <p>
