--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Peso: 
                 </label>
                 <input type="number" id="input_peso" min="0" step="0.1" onchange="calcular(animal)" 
-                onkeypress="calcular(animal)">
+                onkeypress="calcular(animal)" onkeydown="return event.key != 'Enter';">
             </p>
             <p>
                 <label for="input_hospitalizado" class="hospitalizado" style="display: none;">
