--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <label for="input_gato" class="label_radio">
                     Gato
                 </label>
+            </div>
+            <div class="div_formulario">
                 <label for="input_peso">
                     Peso: 
                 </label>
@@ -35,6 +37,8 @@
                 </label>
                 <input type="range" id="input_atividade" min="1" max="5" step="1" onchange="calcular(animal)" 
                 onkeypress="calcular(animal)" onkeydown="return event.key != 'Enter';">
+            </div>
+            <div class="div_formulario">
                 <label for="input_score">
                     Score corporal:
                 </label>
