FInalizado layout flex

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body onclick="calcular(animal)" onforminput="calcular()">
     <header>
         <h1 class="tituloPrincipal">Calculadora de Calorias para Pets</h1>
-        <p>Cálculo baseado nas nescessidades basais (NEB)</p>
+        <p>Cálculo das rações baseado nas nescessidades basais (NEB)</p>
     </header>
     <main>
         <form action="post" id="formulario_principal">
