animacao no titulo via css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body onclick="calcular(animal)" onforminput="calcular()">
     <header>
-        <h1 class="tituloPrincipal">Calculadora de Calorias para Pets</h1>
+        <h1 class="tituloPrincipal">
+            Calculadora de Calorias para <span id="span_pets">Pets</span>
+        </h1>
         <p>Cálculo das rações baseado nas necessidades basais (NEB)</p>
     </header>
     <main>
