--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </header>
     <main>
         <form action="post" id="formulario_principal">
-            <div class="div_formulario">
+            <div class="div_formulario" onclick="mudarTituloPets(animal)"
+            onchange="mudarTituloPets(animal)">
                 <input type="radio" name="especie" id="input_cao" value="cao">
                 <label for="input_cao" class="label_radio">
                     Cachorro
@@ -32,7 +33,8 @@
                     Peso: 
                 </label>
                 <input type="number" id="input_peso" min="0" step="0.1" onchange="calcular(animal)" 
-                    onkeypress="calcular(animal)" onkeydown="return event.key != 'Enter';">
+                    onkeypress="calcular(animal)" onfocus="calcular(animal)" 
+                    onkeydown="return event.key != 'Enter';">
             </div>
             <div class="div_formulario">
                 <label for="input_atividade">
