Adicinado resultado em AN basica

--- a/hosp.html
+++ b/hosp.html
@@ -24,3 +24,6 @@
         </label>
         <input type="checkbox" name="" id="input_emese">
     </p>
+
+
+    1000 kcal: 181g de porco; 325g batata-doce; 13g óleo de coco; 5g de fooddog.
