--- a/index.html
+++ b/index.html
@@ -52,16 +52,18 @@
             </div>
         </form>
         <div class="resultados">
-            <article id="article_neb">
+            <article id="article_neb" class="resultado">
                 <div id="resultado_neb" class="div_resultados">
                     Calcule as refeições!
                 </div>
             </article>
             <article id="article_nem" class="superOff">
                 <div id="resultado_nem">
-                    nem
                 </div>
             </article>
+        </div>
+        <div class="superOff" id="resultado_an">
+            Diogo
         </div>
         <div class="popup" onclick="mostrarPopUp()" style="display:none;">Teste de Pop-up
             <span class="popuptext" id="popup_id">Texto qualquer...</span>
