--- a/index.html
+++ b/index.html
@@ -73,5 +73,7 @@
     <footer>
     </footer>
     <script src="script.js"></script>
+    <script src="comidas.js" type="module"></script>
+    
 </body>
 </html>
