melhorada as animacoes de resultados e range

--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
             </div>
         </form>
         <div class="resultados">
-            <article id="article_neb" class="resultado">
-                <div id="resultado_neb" class="div_resultados">
+            <article id="resultado_instrucoes" class="resultado">
+                <div id="" class="div_resultados">
                     Calcule as refeições!
+                </div>
+            </article>
+            <article id="article_neb" class="superOff">
+                <div id="resultado_neb" class="div_resultados">
                 </div>
             </article>
             <article id="article_nem" class="superOff">
