--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon/favicon-96x96.png">
     
 </head>
-<body onclick="calcular(animal)" onforminput="calcular()">
+<body onclick="pegar_dados(animal)" onforminput="pegar_dados()">
     <header>
         <h1 class="tituloPrincipal">
             Calculadora de Calorias para <span id="span_pets">Pets</span>
@@ -33,8 +33,8 @@
             <div class="div_formulario">
                 <label for="input_peso">
                     Peso: 
-                    <input type="number" id="input_peso" min="0" step="0.1" onchange="calcular(animal)" 
-                    onkeypress="calcular(animal)" onfocus="calcular(animal)" 
+                    <input type="number" id="input_peso" min="0" step="0.1" onchange="pegar_dados(animal)" 
+                    onkeypress="pegar_dados(animal)" onfocus="pegar_dados(animal)" 
                     onkeydown="return event.key != 'Enter';">
                 </label>
             </div>
@@ -42,15 +42,15 @@
                 <label for="input_atividade">
                     Atividade:
                 </label>
-                <input type="range" id="input_atividade" min="1" max="5" step="1" onchange="calcular(animal)" 
-                onkeypress="calcular(animal)" onkeydown="return event.key != 'Enter';">
+                <input type="range" id="input_atividade" min="1" max="5" step="1" onchange="pegar_dados(animal)" 
+                onkeypress="pegar_dados(animal)" onkeydown="return event.key != 'Enter';">
             </div>
             <div class="div_formulario">
                 <label for="input_score">
                     Score corporal:
                 </label>
-                <input type="range" id="input_score" min="1" max="5" step="1" onchange="calcular(animal)" 
-                onkeypress="calcular(animal)" onkeydown="return event.key != 'Enter';">
+                <input type="range" id="input_score" min="1" max="5" step="1" onchange="pegar_dados(animal)" 
+                onkeypress="pegar_dados(animal)" onkeydown="return event.key != 'Enter';">
             </div>
         </form>
         <div class="resultados">
@@ -84,6 +84,5 @@
     <footer>
     </footer>
     <script src="script.js"></script>
-    <script src="comidas.js" type="module"></script>
 </body>
 </html>
