melhorada a hierarquia das funcoes e adicionados comentarios na calculadora

--- a/refeicao/refeicao.html
+++ b/refeicao/refeicao.html
@@ -12,12 +12,29 @@
     <main class="resultados">
         <article class="resultado" id="article_nescessidades">
             <h1>Nescessidades</h1>
-            <ol>
-                <li>Calorias</li>
-                <li>Proteínas</li>
-                <li>Gorduras</li>
-                <li>Carboidratos</li>
-            </ol>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nutriente</th>
+                    </tr>
+                    <tr>
+                        <td>Calorias</td>
+                    </tr>
+                    <tr>
+                        <td>Proteínas</td>
+                    </tr>
+                    <tr>
+                       <td>Gorduras</td>
+                    </tr>
+                    <tr>
+                        <td>Carboidratos</td>
+                    </tr>
+                    <tr>
+                        <td>Vitaminas</td>
+                    <tr>
+                        <td>Sais minerais</td>
+                    </tr>
+            </table>
         </article>
         <article class="resultado" id="article_refeicao">
             <h1>Refeição</h1>
@@ -26,18 +43,23 @@
                 <li>Proteínas</li>
                 <li>Gorduras</li>
                 <li>Carboidratos</li>
+                <li id="Vitaminas_refeicao">Vitaminas</li>
+                <li id="sais_minerais_refeicao">Sais minerais</li>
             </ol>
         </article>
         <article class="resultado" id="article_resultado">
             <h1>Resultado</h1>
             <ol>
-                <li>Calorias</li>
+                <li id="calorias_resultado">Calorias</li>
                 <li>Proteínas</li>
                 <li>Gorduras</li>
                 <li>Carboidratos</li>
+                <li id="vitaminas_resultado">Vitaminas</li>
+                <li>Sais minerais</li>
             </ol>
         </article>
     </main>
 </body>
 <script src="comidas.js"></script>
 </html>
+
